# react-native-quick-utf8

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-quick-utf8.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/quickutf8/: QuickUtf8Module.java  QuickUtf8Package.java
cpp/: react-native-quick-utf8.cpp  react-native-quick-utf8.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/quickutf8example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/QuickUtf8Example/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/QuickUtf8Example.xcodeproj/: project.pbxproj
example/ios/QuickUtf8Example.xcodeproj/xcshareddata/xcschemes/: QuickUtf8Example.xcscheme
example/ios/QuickUtf8Example.xcworkspace/: contents.xcworkspacedata
example/ios/QuickUtf8ExampleTests/: QuickUtf8ExampleTests.m
example/src/: App.tsx
ios/: QuickUtf8.h  QuickUtf8.mm
src/: index.ts  index.tsx  index.web.ts
